# LaunchPro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: 快速开始.md  故障排除.md  数据持久化.md  构建与部署.md
docs/API 参考/: API 参考.md  Tauri 命令接口.md  TypeScript 接口定义.md  数据模型规范.md
docs/UI 组件库/: UI 组件库.md  上下文菜单组件.md  基础 UI 组件.md  工具管理组件.md  布局组件.md  设置组件.md  项目管理组件.md
docs/后端服务/: 后端服务.md  命令处理器.md  最近项目系统.md  系统托盘.md  进程管理.md
docs/开发指南/: 代码规范与质量.md  开发指南.md  开发环境配置.md  构建与部署.md  调试与测试.md
docs/架构设计/: 前端架构.md  后端架构.md  数据流设计.md  架构设计.md  集成模式.md
docs/核心功能模块/: 核心功能模块.md
docs/核心功能模块/工具管理模块/: 内置工具集.md  工具UI组件.md  工具数据模型.md  工具状态管理.md  工具管理模块.md
docs/核心功能模块/用户界面模块/: 主布局设计.md  主题系统.md  侧边栏导航.md  用户界面模块.md  设置面板.md
docs/核心功能模块/项目管理模块/: 项目 CRUD 操作.md  项目 UI 组件.md  项目数据模型.md  项目管理模块.md
docs/状态管理/: UI 状态管理.md  工具状态管理.md  状态管理.md  设置状态管理.md  项目状态管理.md
docs/项目概述/: 应用介绍.md  快速开始.md  技术栈.md  项目概述.md
docs/项目概述/安装指南/: 安装指南.md  源码构建安装.md  预编译二进制安装.md
docs/项目概述/核心功能/: 一键启动.md  工具管理.md  数据持久化.md  (+3 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: launch_cli.py
src-tauri/scripts/: generate_icon.py
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/hooks/: useOpenProject.ts  useTheme.ts
src/lib/: constants.ts  storage.ts  tauri-commands.ts
src/stores/: useProjectStore.ts  useSettingsStore.ts  useToolStore.ts  useUIStore.ts
src/types/: index.ts
(+10 files in other folders)
